push from script

--- a/main.tex
+++ b/main.tex
@@ -67,7 +67,8 @@
 \clearpage
 
 \pagenumbering{arabic}
-\input{struct/01-introduction.tex}
+% \input{struct/01-introduction.tex}
+\input{struct/02-iafoosball.tex}
 \clearpage
 
 \printbibliography[heading=bibintoc]
