push from script

--- a/struct/02-iafoosball.tex
+++ b/struct/02-iafoosball.tex
@@ -17,4 +17,4 @@ The sensors were directly connected to raspberry pi and a simple javascript appl
     \includegraphics[scale=0.3]{figures/goal-new.png}% picture filename
     \caption{The new IAFoosball goal}\label{fig:goalNew}
 \end{figure}\\
-\Cref{fig:goalNew} shows this new setup. Marked in grey are the components used for each goal. The esp32 is the component doing the computation and sending data to a raspberry pi via bluetooth low energy (BLE). It is connected to 
+\Cref{fig:goalNew} shows this new setup. Marked in grey are the components used for each goal, a battery (we use a lithium-ion battery), one laser, one light sensor and one esp32. The esp32 is the component doing the computation and sending data to a raspberry pi via bluetooth low energy (BLE). It is also the main factor for the goal design, which will be discussed next. 
