--- a/main.tex
+++ b/main.tex
@@ -14,7 +14,7 @@
 \usepackage{makecell}
 \usepackage{float}
 \usepackage{pdfpages}
-\usepackage{svg}
+\usepackage{multirow}
 \usepackage[noabbrev]{cleveref}
 \usepackage[toc,page]{appendix}
 
@@ -44,31 +44,16 @@
 \graphicspath{{pictures/}}
 
 \begin{document}
-% \includepdf[pages=-]{PDF/page_0.pdf}
-\maketitle
-
-% \begin{figure}
-% \vspace{-18cm}
-%     \centering
-%     \includegraphics[scale=0.4]{agillic-full-product-ball.png}
-%     \label{fig:agillic-logo}
-% \end{figure}
-% \clearpage
-
-
 
 \cfoot{\thepage}
 \pagenumbering{Roman}
 
-%\citetrackerfalse
-\clearpage
-% \tableofcontents
-% \listoffigures
-\clearpage
+% \include{frontpage.tex}
 
 \pagenumbering{arabic}
 % \input{struct/01-introduction.tex}
-\input{struct/02-iafoosball.tex}
+% \input{struct/02-iafoosball.tex}
+\input{struct/03-requirements.tex}
 \clearpage
 
 \printbibliography[heading=bibintoc]
