push from script

--- a/main.tex
+++ b/main.tex
@@ -15,6 +15,7 @@
 \usepackage{float}
 \usepackage{pdfpages}
 \usepackage{multirow}
+\usepackage{longtable}
 \usepackage[noabbrev]{cleveref}
 \usepackage[toc,page]{appendix}
 
