push from script

--- a/bibl.bib
+++ b/bibl.bib
@@ -33,3 +33,12 @@ month = {March},
 year = {2019},
 note = {(Accessed on 05/17/2019)}
 }
+
+@inproceedings{wurm2016securityAftertought,
+  title={Security analysis on consumer and industrial IoT devices},
+  author={Wurm, Jacob and Hoang, Khoa and Arias, Orlando and Sadeghi, Ahmad-Reza and Jin, Yier},
+  booktitle={2016 21st Asia and South Pacific Design Automation Conference (ASP-DAC)},
+  pages={519--524},
+  year={2016},
+  organization={IEEE}
+}
