push from script

--- a/main.tex
+++ b/main.tex
@@ -49,11 +49,11 @@
 \cfoot{\thepage}
 \pagenumbering{Roman}
 
-% \include{frontpage.tex}
+\include{frontpage.tex}
 
 \pagenumbering{arabic}
-% \input{struct/01-introduction.tex}
-% \input{struct/02-iafoosball.tex}
+\input{struct/01-introduction.tex}
+\input{struct/02-iafoosball.tex}
 \input{struct/03-requirements.tex}
 \clearpage
 
