push from script

--- a/main.tex
+++ b/main.tex
@@ -49,7 +49,7 @@
 \cfoot{\thepage}
 \pagenumbering{Roman}
 
-\include{frontpage.tex}
+\input{struct/00-frontpage.tex}
 
 \pagenumbering{arabic}
 \input{struct/01-introduction.tex}
