--- a/struct/03-requirements.tex
+++ b/struct/03-requirements.tex
@@ -1,9 +1,9 @@
 \section{Requirements}
-The requirements are split into functional and non-functional requirements, where the former are definitions of what a system is supposed to do and the latter requirments describing how the system is supposed to be. The respective tables are included at the end of the chapter to enhance readability.\\
-The functional requirements are classified with the MoSCoW method into Must, Should, Could, and Would and are listed in \cref{tab:funcReq}\footnote{Class stands for the MoSCoW classifier.}. The musts reflect the requirements for our project from this course. Our objective is to create a functional wireless automatic goal registration device driven by a battery and having a low maintenance cost. Power saving mechanisms are thus a top priority and tested in the respective chapter (add reference). The overall architecture is also very important for mangement and fault tolerance. But as these topics are not an essential part of the curriculum they are not explained extensively. Finally, "security in IoT devices is either neglected or treated as an afterthought"\cite{wurm2016securityAftertought} by many manufacturers. We split security into two areas, architecture security and encryption, as changing a system is often much harder than upgrading the encryption.\\
+The requirements are split into functional and non-functional requirements, where the former are definitions of what the system is supposed to do and the latter requirments describing how the system is supposed to be. The respective tables are included at the end of the chapter to enhance readability.\\
+The functional requirements are classified with the MoSCoW method into Must, Should, Could, and Would and are listed in \cref{tab:funcReq}\footnote{Class stands for the MoSCoW classifier.}. The musts reflect the requirements for our project from this course. Our objective is to create a functional wireless automatic goal registration device driven by a battery and having a low maintenance cost. Power saving mechanisms are thus a top priority and tested in the respective chapter (add reference). The overall architecture is also very important for mangement and fault tolerance. But as the topics are not an essential part of the curriculum they are not explained extensively. Finally, "security in IoT devices is either neglected or treated as an afterthought"\cite{wurm2016securityAftertought} by many manufacturers. Security is part of the curriculum, but also something encompassing communication as well as the system design. We thus split security into two areas, architecture security and encryption, changing a system is often much harder than upgrading the encryption. Encryption is "only" ranked as a should, as a functioning prototype is more important.\\
 The criteria for the non-functional requirements are shown in \cref{tab:nonfuncReq}.
 In contrast to many consumer facing technologies usability is not part of the requirements, as the enduser should have as little interaction with the system as possible and physical maintenance is only carried out by professionals\footnote{They would still be nice, but due to time limitations we excluded them.}.\\ 
-We cover the areas: Reliability, Robustness, Portability, Maintainability and Efficiency, with a focus on this course curriculum.
+The non-functional requirements cover the areas: Reliability, Robustness, Portability, Maintainability and Efficiency, again, focusing on this course curriculum. How to make the device as power efficient as possible will be the biggest discussion point, again.
 
 \clearpage
 % \begin{tabular}[t]{ l p{2.4cm} l p{7.6cm}}
@@ -32,7 +32,9 @@ We cover the areas: Reliability, Robustness, Portability, Maintainability and Ef
         112 & Containers (excl microc.) & Should         & All applications, excluding the microcontroller, should run inside containers.                                                     \\      
         113 & Containers                & Would          & The microcontroller code runs inside containers as well.                                                                           \\
         114 & Single binaries           & Could          & All applications should be packaged in one binary.                                                                                 \\
-        115 & Edge storage              & Would          & The edge part should be able to count goals and syncronize with user devices without the Internet.                                 \\                         
+        115 & Edge storage              & Would          & The edge part should be able to count goals and syncronize with user devices without the Internet.                                 \\
+        116 & Encryption                & Should         & All data should be encrypted with AES-128 or better.                                                                               \\
+        117 & Verified updates          & Would          & The microcontroller would only install signed and verified updates.                                                                \\                        
         \end{tabular}\label{tab:funcReq}
     \end{table}
 
