push from script

--- a/bibl.bib
+++ b/bibl.bib
@@ -42,3 +42,12 @@ note = {(Accessed on 05/17/2019)}
   year={2016},
   organization={IEEE}
 }
+
+@misc{smartVSLightoutFactories:online,
+author = {Juan Pedro Tomás},
+title = {Smart manufacturing vs. Lights out manufacturing},
+howpublished = {\url{https://enterpriseiotinsights.com/20170616/channels/fundamentals/20170616channelsfundamentalsufacturing-lights-out-manufacturing-tag23-tag99}},
+month = {June},
+year = {2016},
+note = {(Accessed on 05/27/2019)}
+}
