--- a/main.tex
+++ b/main.tex
@@ -52,11 +52,10 @@
 % \input{struct/00-frontpage.tex}
 
 \pagenumbering{arabic}
-% \input{struct/01-introduction.tex}
-% \input{struct/02-iafoosball.tex}
+\input{struct/01-introduction.tex}
+\input{struct/02-iafoosball.tex}
 % \input{struct/03-requirements.tex}
-\input{struct/04-architecture.tex}
-\clearpage
+% \input{struct/04-architecture.tex}
 
 \printbibliography[heading=bibintoc]
 \clearpage
