--- a/struct/01-introduction.tex
+++ b/struct/01-introduction.tex
@@ -1,20 +1,25 @@
 \section{Introduction}
-The Internet of Things (IoT) will change humanity in profound and unforeseeable ways\cite{ciscoReport}. According to a report by Cisco, between 2015 and 2020 the number of connected IoT devices is set to double from 25 billion to 50 billion\cite{ciscoReport}. This new revolution is driven by lower prices in manufacturing IoT devices as well as new inventions in radio communication and better processing power. This means more data than ever will be collected and automation will be the norm, rather than the exception. Industrial IoT (IIoT) and smart home are prime example for this. New factories are often operated by only a few workers and lights and temperature are increasingly controlled by an AI rather than the human living in it. This leads to higher productivity, better power management and more comfort among other improvements. In most cases, this new technology is used to aid humans, but recent history has shown that IoT brings many diverse challenges in technology, security and social life.\\
-In 2016 a botnet with over 600k infected devices, primarily embedded and IoT devices, overwhelmed several high-profile targets like the DNS provider Dyn with a massive distributed denial-of-service (DDoS) attacks. This caused a temporary outage of their DNS servers making many webpages, among others  Twitter, Spotify und Amazon, temporally inaccessible.\\
-The sheer number of IoT devices also makes it important to think about their sustainability. Many IoT devices are cheap to manufacturer and thus only used for a short period of time and are hard to update. This makes basically makes them a throwaway product. Many IoT devices have a stable power connection and are not designed to be energy efficient. \\
-IoT devices are by design often close to humans and are intended to analyze what they say, do and how their body reacts. This leads many people to assume that IoT, especially smart home and activity tracking are incompatible with privacy\cite{5Reasons41:online}. In the past many companies overstepped the line what is socially excepted and had to back-roll certain "features"\cite{PrivacyIoT50:online}. For many consumers, privacy is the major concern in smart home\cite{PrivacyIoT50:online}.\\
+The Internet of Things (IoT) will change humanity in profound and unforeseeable ways\cite{ciscoReport}. According to a report by Cisco, between 2015 and 2020 the number of connected IoT devices is set to double from 25 billion to 50 billion\cite{ciscoReport}. This new revolution is driven by lower prices in manufacturing IoT devices as well as new inventions in radio communication and better processing power. This means more data than ever will be collected and automation will be the norm, rather than the exception. Industrial IoT (IIoT) and smart home are prime example for this. New factories are often operated by only a few or no workers at all. The former is called smart factories and the latter or lights-out factories\cite{smartVSLightoutFactories:online}. In homes lights and temperature are increasingly controlled by an AI rather than the human living in it. This leads to higher productivity, better power management, more comfort and ther improvements. In most cases, this new technology is used to aid humans, but recent history has shown that IoT also brings many diverse challenges in technology, security and social life.\\
+
+In 2016 a botnet with over 600k infected devices, primarily IoT devices, overwhelmed several high-profile targets like the DNS provider Dyn with massive distributed denial-of-service (DDoS) attacks. This caused a temporary outage of their DNS servers making many webpages, among others  Twitter, Spotify und Amazon, temporally inaccessible.\\
+
+The sheer number of IoT devices also makes it important to think about their sustainability. Many IoT devices are cheap to manufacturer and thus only used for a short period of time. They are hard to update, because they usually lack a simple connection mechanism for updating and are placed in hard to reach places. Often, this makes them throwaway products.\\
+
+Finlly, some IoT devices are designed to aid homes in their homes and outside and are intended to analyze what they say, do and how their body behaves. This leads many professionals to the opinion that IoT, especially smart home and activity tracking are incompatible with privacy\cite{5Reasons41:online}. In the past many companies crossed the socially excepted line and had to roll back certain "features"\cite{PrivacyIoT50:online}. Google recordered open WiFis during its Street View program and Amazons Echo, was and still is, recording all conversations. Studies have shown that for many consumers privacy is the major concern in smart home\cite{PrivacyIoT50:online} and legislations have to be in place to check and balance the producers of IoT devices.\\
+
 These four areas, technological improvements, security, sustainability and privacy, are the four areas shaping the development of IoT and the main drivers for many technological as well as architectural decisions in the development process of the product developed as part of this project. The reminder or this report is structured as follows, *** 
 
 \subsection{Motivation}
-In this project we develop a new wireless goal for foosball tables. The backend software to manage user data and a primary architecture was part of a previous project and is shortly discussed in the next chapter. The table and the backend software works as intended, but the physical implementation of the table, shown in figure *** is tailor made for the table we used in the development and not portable across different brands and designs. 
-\\
-SHOW PICTURE OF TABLE!!\\
+In this project we develop a new wireless goal for foosball tables for the IAFoosball project. We already developed a self counting goal, but it was not portable to other tables. The setup was table specific and wired up in such a way that was not scalable nor future proven. In this project, we would like to improve these shortcomings. The goal is the central part of the table. Making  it scalable and easy to maintain is very important for the IAFoosball project going forward. 
 
-In order to make our solution attractive to bars and companies alike the solution neeeds to be easy to implement and manage. Thus, the research question for this project is as follow:
+The backend software to manage user data and a primary architecture was part of a previous project and is shortly discussed in the next chapter. However, the choice of our backend software heavily influenced the software choice and automation flow. 
+In our vision the table is a special, but integrated, part of our server architecture. This vision is shortly explained as orchestration in IoT is not part of the curriculum.\\
+
+In order to make our solution attractive to bars and companies alike the solution neeeds to be easy to implement and manage. The resulting research question for this project is as follow:
 \begin{center}
-    \textit{What is the optimal design for a scalable wireless foosball goal?}
+    \textbf{\textit{What is the optimal design for a scalable wireless foosball goal?}}
 \end{center}
-We will answer the question based on the four aspects, the technology, security, sustainability and privacy. 
+We will answer the question based on the four aspects: technology, security, sustainability and privacy. 
 
 \subsection{Delimitations}
 Due to time and equipment limitations we will focus on the technology in this report. Also, the findings from our tests are useful as a general reference point when discussing the strength and weaknesses of competing solutions. But as the tests do not follow strict academic rules, these findings are not statistical significant. \\
