push from script

--- a/bibl.bib
+++ b/bibl.bib
@@ -51,3 +51,12 @@ month = {June},
 year = {2016},
 note = {(Accessed on 05/27/2019)}
 }
+
+@misc{InsightI15esp32ModesWroom:online,
+author = {},
+title = {Insight Into ESP32 Sleep Modes \& Their Power Consumption},
+howpublished = {\url{https://lastminuteengineers.com/esp32-sleep-modes-power-consumption/}},
+month = {},
+year = {},
+note = {(Accessed on 05/28/2019)}
+}
