--- a/main.tex
+++ b/main.tex
@@ -14,6 +14,7 @@
 \usepackage{makecell}
 \usepackage{float}
 \usepackage{pdfpages}
+\usepackage{amsmath}
 \usepackage{multirow}
 \usepackage{longtable}
 \usepackage[noabbrev]{cleveref}
@@ -56,6 +57,7 @@
 \input{struct/02-iafoosball.tex}
 % \input{struct/03-requirements.tex}
 % \input{struct/04-architecture.tex}
+\input{struct/05-tests.tex}
 
 \printbibliography[heading=bibintoc]
 \clearpage
