--- a/struct/01-introduction.tex
+++ b/struct/01-introduction.tex
@@ -1,16 +1,20 @@
 \section{Introduction}
-The Internet of Things (IoT) will change humanity in profound and unforeseeable ways\cite{ciscoReport}. According to a report by Cisco, between 2015 and 2020 the number of connected IoT devices is set to double from 25 billion to 50 billion\cite{ciscoReport}. This new revolution is driven by lower prices in manufacturing IoT devices as well as new inventions in radio communication and better processing power. This means more data than ever will be collected and automation will be the norm, rather than the exception. Industrial IoT (IIoT) and smart home are prime example for this. New factories are often operated by only a few or no workers at all. The former is called smart factories and the latter or lights-out factories\cite{smartVSLightoutFactories:online}. In homes lights and temperature are increasingly controlled by an AI rather than the human living in it. This leads to higher productivity, better power management, more comfort and ther improvements. In most cases, this new technology is used to aid humans, but recent history has shown that IoT also brings many diverse challenges in technology, security and social life.\\
+\\
+maybe we should mention IAFoosball in introduction?
+\\
+The Internet of Things (IoT) will change humanity in profound and unforeseeable ways\cite{ciscoReport}. According to a report by Cisco, between 2015 and 2020 the number of connected IoT devices is set to double from 25 billion to 50 billion\cite{ciscoReport}. This new revolution is driven by lower prices in manufacturing IoT devices as well as new inventions in radio communication and better processing power. This means more data than ever will be collected and automation will be the norm, rather than the exception. Industrial IoT (IIoT) and smart home are prime example for this. New factories are often operated by only a few or no workers at all. The former is called smart factories and the latter or lights-out factories\cite{smartVSLightoutFactories:online}. In homes lights and temperature are increasingly controlled by an AI rather than the human living in it. This leads to higher productivity, better power management, more comfort and ther improvements. In most cases, this new technology is used to aid humans, but recent history has shown that IoT also brings many diverse challenges in technology, security and social life. Such as:?\\
 
-In 2016 a botnet with over 600k infected devices, primarily IoT devices, overwhelmed several high-profile targets like the DNS provider Dyn with massive distributed denial-of-service (DDoS) attacks. This caused a temporary outage of their DNS servers making many webpages, among others  Twitter, Spotify und Amazon, temporally inaccessible.\\
+In 2016 a botnet with over 600k infected devices, primarily IoT devices, overwhelmed several high-profile targets like the DNS provider Dyn with massive distributed denial-of-service (DDoS) attacks. This caused a temporary outage of their DNS servers making many webpages, among others  Twitter, Spotify und(Lol, so german im not going to correct it :) ) Amazon, temporally inaccessible.\\
 
 The sheer number of IoT devices also makes it important to think about their sustainability. Many IoT devices are cheap to manufacturer and thus only used for a short period of time. They are hard to update, because they usually lack a simple connection mechanism for updating and are placed in hard to reach places. Often, this makes them throwaway products.\\
 
-Finlly, some IoT devices are designed to aid homes in their homes and outside and are intended to analyze what they say, do and how their body behaves. This leads many professionals to the opinion that IoT, especially smart home and activity tracking are incompatible with privacy\cite{5Reasons41:online}. In the past many companies crossed the socially excepted line and had to roll back certain "features"\cite{PrivacyIoT50:online}. Google recordered open WiFis during its Street View program and Amazons Echo, was and still is, recording all conversations. Studies have shown that for many consumers privacy is the major concern in smart home\cite{PrivacyIoT50:online} and legislations have to be in place to check and balance the producers of IoT devices.\\
+Finlly, some IoT devices are designed to aid humans in their homes and outdoor environment and are intended to analyze what they say, do and how their body behaves. This leads many professionals to the opinion that IoT, especially smart home and activity tracking are incompatible with privacy\cite{5Reasons41:online}. In the past many companies crossed the socially excepted line and had to roll back certain "features"\cite{PrivacyIoT50:online}. Google recorded open WiFis during its Street View program(IoT related? i think google records all Bluetooth devices on their gHomes) and Amazons Echo, was and still is, recording all conversations. Studies have shown that for many consumers privacy is the major concern in smart home\cite{PrivacyIoT50:online} and legislations have to be in place to check and balance the producers of IoT devices.\\
 
-These four areas, technological improvements, security, sustainability and privacy, are the four areas shaping the development of IoT and the main drivers for many technological as well as architectural decisions in the development process of the product developed as part of this project. The reminder or this report is structured as follows, *** 
+These four areas, technological improvements, security, sustainability and privacy, are the four areas shaping the development of IoT and the main drivers for many technological as well as architectural decisions in the development process of the product developed as part of this project. The reminder or this report is structured as follows, ***\\
+Maybe end line could be something along the lines of, The reminder of this report, is exploring a small/big/(some measurement) of these areas 
 
 \subsection{Motivation}
-In this project we develop a new wireless goal for foosball tables for the IAFoosball project. We already developed a self counting goal, but it was not portable to other tables. The setup was table specific and wired up in such a way that was not scalable nor future proven. In this project, we would like to improve these shortcomings. The goal is the central part of the table. Making  it scalable and easy to maintain is very important for the IAFoosball project going forward. 
+In this project we develop a new wireless goal for foosball tables for the IAFoosball project. We already developed a simple goal detecting goal, but it was not portable to other tables. The setup was table specific and wired up in such a way that was not scalable nor future proven. In this project, we would like to improve these shortcomings. The goal is the central part of the table. Making  it scalable and easy to maintain is very important for the IAFoosball project going forward. 
 
 The backend software to manage user data and a primary architecture was part of a previous project and is shortly discussed in the next chapter. However, the choice of our backend software heavily influenced the software choice and automation flow. 
 In our vision the table is a special, but integrated, part of our server architecture. This vision is shortly explained as orchestration in IoT is not part of the curriculum.\\
