--- a/struct/02-iafoosball.tex
+++ b/struct/02-iafoosball.tex
@@ -12,8 +12,8 @@ is the development version and has all features. It includes, speakers with Spot
 
 
 \subsection{Goal Design}
-The goal design is the primary part of this report and the most lacking part in the old setup. 
-\Cref{fig:goalOld} shows the electronic wiring of the old goal.
+The goal design is the primary part of this report and the most lacking part in the former project. 
+In \cref{fig:goalOld} the old electronic wiring is shown.
 
 \begin{figure}[h!]
     \centering
@@ -21,7 +21,7 @@ The goal design is the primary part of this report and the most lacking part in 
     \caption{The old IAFoosball goal}\label{fig:goalOld}
 \end{figure}
 
-The sensors were directly connected to raspberry pi and a simple javascript application registered the goals and send them to a remote server. This required a power outlet and a raspberry pi on each table. It also required cables from each goal to the raspberry pi. This approach did not scale well and in a multi-table setup also wasted money as each table needed its own raspberry pi. We re-thought the design, making it more varsatile, easier to integrate and manage and also cheaper for multiple tables.
+The sensors were directly connected to Raspberry Pi, and a simple javascript application registered the goals and sent them to a remote server. This required a power outlet and a Raspberry Pi on each table. It also required cables from each goal to the Raspberry Pi. This approach did not scale well and in a multi-table setup also wasted money as each table needed its own Raspberry Pi. We re-thought the design, making it more versatile, easier to integrate and manage and also cheaper for multiple tables.
 
 \begin{figure}[h!]
     \centering
@@ -29,5 +29,5 @@ The sensors were directly connected to raspberry pi and a simple javascript appl
     \caption{The new IAFoosball goal}\label{fig:goalNew}
 \end{figure}
 
-\Cref{fig:goalNew} shows this new setup. Marked in grey are the components used for each goal, a battery (we use a lithium-ion battery), one laser, one light sensor and one esp32. To measure goal speed we would need to have to lasers and two sensors. The esp32 is the component doing the computation and sending data to a raspberry pi via bluetooth low energy (BLE). It is powered by a battery pack and only active when the need arises.\\
+\Cref{fig:goalNew} shows this new setup. Marked in grey are the components used for each goal, a battery (we use a lithium-ion battery), one laser, one light sensor and one esp32. To measure goal speed we would need to have to lasers and two sensors. The esp32 is the component doing the computation and sending data to a Raspberry Pi via bluetooth low energy (BLE). It is powered by a battery pack and only active when the need arises.\\
 
