--- a/main.tex
+++ b/main.tex
@@ -50,13 +50,13 @@
 \cfoot{\thepage}
 \pagenumbering{Roman}
 
-% \input{struct/00-frontpage.tex}
+\input{struct/00-frontpage.tex}
 
 \pagenumbering{arabic}
-% \input{struct/01-introduction.tex}
-% \input{struct/02-iafoosball.tex}
-% \input{struct/03-requirements.tex}
-% \input{struct/04-architecture.tex}
+\input{struct/01-introduction.tex}
+\input{struct/02-iafoosball.tex}
+\input{struct/03-requirements.tex}
+\input{struct/04-architecture.tex}
 \input{struct/05-tests.tex}
 
 \printbibliography[heading=bibintoc]
